# cxx-chessops

./: CMakeLists.txt  README.md
examples/: main.cxx
src/: CMakeLists.txt  Pext.hpp  bitboard.cxx  bitboard.hxx  log.cxx  log.hxx  types.hxx
